@@ -140,6 +140,11 @@ IN DEVELOPMENT
       than using a call to ``transaction_finished``, allowing the removal of
       the fixed list of versioned files per repository. (Robert Collins)
 
+    * ``VersionedFile.annotate_iter`` is deprecated. While in principal this
+      allows lower memory use, all users of annotations wanted full file 
+      annotations, and there is no storage format suitable for incremental
+      line-by-line annotation. (Robert Collins)
+
     * ``VersionedFile.clone_text`` is deprecated. This performance optimisation
       is no longer used - reading the content of a file that is undergoing a
       file level merge to identical state on two branches is rare enough, and
